# FuzzyTableExtractor

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  examples.py  pyproject.toml  test.py
docs/: requirements.txt
docs/source/: conf.py  extractor.rst  index.rst  installation.rst
docs/source/api/doc_handlers/: doc_handlers.rst  docx_handler.rst
docs/source/api/handlers/: base_handler.rst  docx_handler.rst
docs/source/usage/: basic_usage.rst
fuzzy_table_extractor/: doc_handlers.py  extractor.py  matcher.py  matcher_test.py  util.py  util_test.py
fuzzy_table_extractor/handlers/: base_handler.py  docx_handler.py  docx_handler_test.py  docx_xml_handler.py  handlers_test.py
fuzzy_table_extractor/integration_tests/: docx_extraction_test.py
fuzzy_table_extractor/tests/: docx_extraction_test.py  docx_handler_test.py
sample_docs/: E001 - basic content.doc  E001 - basic content.docx  E002 - inner tables.docx  E003 - typos.docx  E004 - splited tables.docx  E005 - extract single field.docx  E006 - doc with sections.docx  sample_01.docx
