[tool.poetry]
name = "FuzzyTableExtractor"
version = "0.1.0"
description = "A tool to extract tables from documents using fuzzy matching"
authors = ["Leonardo Sirino <leonardosirino@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
python-docx = "^0.8.11"
pywin32 = "^303"
fuzzywuzzy = "^0.18.0"
Unidecode = "^1.3.2"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
