[tool.poetry]
name = "fuzzy-table-extractor"
version = "0.2.2"
description = "A tool to extract tables from documents using fuzzy matching"
authors = ["Leonardo Sirino <leonardosirino@outlook.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/LeonardoSirino/FuzzyTableExtractor"
packages = [{include = "fuzzy_table_extractor"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.5"
python-docx = "^0.8.11"
pywin32 = "^303"
fuzzywuzzy = "^0.18.0"
Unidecode = "^1.3.2"

# [tool.poetry-exec-plugin.commands]
# hello-world = "cd docs\; .\make.bat html; cd .."

[tool.poetry.dev-dependencies]
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"
Sphinx = "^4.4.0"
furo = "^2022.1.2"
poetry-exec-plugin = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
